Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{graphicx} % Required for inserting images
+\usepackage{titling}
 \usepackage{blindtext}
 \usepackage{amsmath}
 \usepackage{amssymb} 
@@ -16,9 +16,9 @@
   CS3263 -- Foundations of Artificial Intelligence
   \\
   Term Project Report
-  \\
-  SmartFridge, an AI agent that recommends the best recipe for you
 }
+
+\subtitle{SmartFridge, an AI agent that recommends the best recipe for you}
 
 \author{
     \textbf{Lei Jianwen} (A0281480E, \texttt{e1155608@u.nus.edu}) \\
