--- a/main.tex
+++ b/main.tex
@@ -16,9 +16,11 @@
   CS3263 -- Foundations of Artificial Intelligence
   \\
   Term Project Report
+  \\
+  SmartFridge, an AI agent that recommends the best recipe for you
 }
 
-\subtitle{SmartFridge, an AI agent that recommends the best recipe for you}
+
 
 \author{
     \textbf{Lei Jianwen} (A0281480E, \texttt{e1155608@u.nus.edu}) \\
