--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,7 @@
 \section{Introduction}
 \subsection{Motivation}
 Research has shown that households often waste food because expiration dates are overlooked and meal planning is not done systematically. The amount of avoidable food waste is equivalent to each household throwing away a 2.5kg bag of rice every week. And over half such waste can be reduced if meals are better planned. Recognizing this issue, our team aims to develop an AI-driven solution. An AI-driven menu suggestion system can address this challenge by tracking food items, reasoning about their freshness, and proposing meal options that prioritize ingredients with shorter expiration dates.
+
 \subsection{Project Scope}
 Our solution contains the following features
 \begin{itemize}
@@ -8,6 +9,15 @@ Our solution contains the following features
     \item Keep track(Add/Delete) recipes from a recipe book
     \item Recommend the most suitable recipe from the recipe book
 \end{itemize}
-\subsection{Techniques Used}
-The recommendation is simulated by a decision-making process to decide which recipe to recommend. A decision tree is constructed to solve this problem. The parameters of the decision tree can be categorized into two types. Two Bayesian networks are implemented to calculate the feasibility of the recipe and probabilities of expiration of food items. The utility function for each recipe is calculated using an unsupervised machine learning model. 
 
+\subsection{Techniques Used}
+The recommendation is simulated by a decision-making process to decide which recipe to recommend. A decision tree is constructed to solve this problem. The parameters of the decision tree can be categorized into two types. Two Bayesian networks are implemented to calculate the feasibility of the recipe and probabilities of expiration of food items. The utility function for each recipe is calculated using an unsupervised machine learning model.
+
+\subsection{Terminology \& Notations}
+
+For clarity, the main symbols and assumptions used in this report is defined below:
+
+\begin{itemize}
+    \item $\mathcal{F} = \{f_1, f_2, \dots f_n\}$ denotes the set of food items available and currently stored in the fridge.
+    \item Each food item $f_i$ is associated with an days in the fridge $d_{f_i}$, 
+\end{itemize}
