Set up local compilation script for

--- a/contents/BN.tex
+++ b/contents/BN.tex
@@ -2,7 +2,7 @@
 The probability of successfully making the recipe depends on various foods available in the fridge. In order to infer the probability of the success, a Bayesian Network is used for modeling.
 
 \subsection{BN structure}
-This is shown in Figure~\ref{fig:BN}
+This can be seen from the picture Figure~\ref{fig:BN}
 \subsection{Learning}
 
 \subsection{BN reasoning}
