--- a/appendix/appendices.tex
+++ b/appendix/appendices.tex
@@ -5,14 +5,14 @@
 \newpage
 \section{diagrams}
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=1.0\textwidth]{appendix/Image/BN.png}
     \caption{Bayesian Network structure}
     \label{fig:BN}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=1.0\textwidth]{appendix/Image/Decision-Network.png}
     \caption{Decision Network structure}
