--- a/reference.bib
+++ b/reference.bib
@@ -9,6 +9,7 @@
   author    = {Stuart Russell and Peter Norvig},
   title     = {Artificial Intelligence: A Modern Approach},
   publisher = {Pearson},
+  address   = {London},
   year      = {2020},
   edition   = {4th}
 }
