--- a/main.tex
+++ b/main.tex
@@ -40,14 +40,19 @@
 % Defining new variable terms
 \newcommand{\Fridge}{\mathcal{F}}
 \newcommand{\RecipeMenu}{\mathcal{M}}
+\newcommand{\FoodNames}{\mathcal{N}}
 \newcommand{\food}{\mathit{f}}
 \newcommand{\recipe}{\mathit{r}}
+
 \newcommand{\days}{\mathit{days}}
 \newcommand{\fname}{\mathit{f\_name}}
 \newcommand{\fty}{\mathit{fty}} % Food type
 \newcommand{\sty}{\mathit{sty}} % Storage type
 \newcommand{\FT}{\mathit{FT}} % Set of food types
 \newcommand{\ST}{\mathit{ST}} % Set of storage types
+
+\newcommand{\recipen}{\mathit{rname}}
+\newcommand{\requirements}{\mathcal{R}}
 
 % Elements of FoodType
 \newcommand{\CANNED}{\text{CANNED}}
