--- a/main.tex
+++ b/main.tex
@@ -48,11 +48,13 @@
 \newcommand{\fname}{\mathit{f\_name}}
 \newcommand{\fty}{\mathit{fty}} % Food type
 \newcommand{\sty}{\mathit{sty}} % Storage type
+
 \newcommand{\FT}{\mathit{FT}} % Set of food types
 \newcommand{\ST}{\mathit{ST}} % Set of storage types
 
 \newcommand{\recipen}{\mathit{rname}}
 \newcommand{\requirements}{\mathcal{R}}
+\newcommand{\taglist}{\mathcal{C}}
 
 % Elements of FoodType
 \newcommand{\CANNED}{\text{CANNED}}
