Add section on Responsible AI, change citation format to ieeetr

--- a/main.tex
+++ b/main.tex
@@ -71,13 +71,14 @@
 \include{contents/Utility}
 \include{contents/Decision_Making}
 \include{contents/Future_Improvement}
+\include{contents/Responsible_AI}
 
 \begin{appendices}
 \renewcommand{\thesection}{Appendix \arabic{section}}
 \include{appendix/appendices}
 \end{appendices}
 
-\bibliographystyle{ACM-Reference-Format}
+\bibliographystyle{ieeetr}
 \bibliography{reference}
 %%%%%%%%%%
 \end{document}
