--- a/reference.bib
+++ b/reference.bib
@@ -40,3 +40,11 @@
       primaryClass={stat.ML},
       url={https://arxiv.org/abs/1807.02811}, 
 }
+
+@article{PredictiveAIforFoodSpoilage,
+    author = {Khuram Shehzad},
+    title = {Predictive AI Models for Food Spoilage and Shelf-Life Estimation},
+    journal = {Global Trends in Science and
+Technology},
+    year = {2025}
+}
