--- a/reference.bib
+++ b/reference.bib
@@ -14,13 +14,17 @@
   edition   = {4th}
 }
 
-@misc{hypertune,
-  author = {Will Koehrsen},
-  title  = {Hyperparameter Tuning the Random Forest in Python},
-  year   = {2018},
-  howpublished = {\url{https://towardsdatascience.com/hyperparameter-tuning-the-random-forest-in-python-using-scikit-learn-28d2aa77dd74/}},
-  note   = {Accessed: 2025-07-12}
+@article{Ankan2024,
+  author  = {Ankur Ankan and Johannes Textor},
+  title   = {pgmpy: A Python Toolkit for Bayesian Networks},
+  journal = {Journal of Machine Learning Research},
+  year    = {2024},
+  volume  = {25},
+  number  = {265},
+  pages   = {1--8},
+  url     = {http://jmlr.org/papers/v25/23-0487.html}
 }
+
 
 @misc{investopedia,
   title = {Investopedia financial term dictonary},
