--- a/appendix/appendices.tex
+++ b/appendix/appendices.tex
@@ -1,10 +1,12 @@
 \section{algorithms}
+\label{app:algorithms}
 \begin{itemize}
     \item algorithms demo: \input{appendix/algorithms/algo0}
 \end{itemize}
 \newpage
-\section{diagrams}
 
+\section{diagrams}
+\label{app:diagrams}
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1.0\textwidth]{appendix/Image/BN.png}
