--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,12 @@
-\documentclass{report}
+\documentclass[12pt]{report}
 \renewcommand{\thesection}{\arabic{section}}
+\usepackage[letterpaper, margin=1in]{geometry} 
+\usepackage{setspace}
+\singlespacing  % 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0.5em}
+
+
 \usepackage{titling}
 \usepackage{blindtext}
 \usepackage{amsmath}
@@ -14,6 +19,7 @@
 \usepackage{algpseudocode}
 \usepackage{listings}
 \usepackage{graphicx}
+\usepackage{enumitem}
 \usepackage[titletoc, title]{appendix}
 %%%%%%%%%%
 \begin{document}
