--- a/appendix/algorithms/algo0.tex
+++ b/appendix/algorithms/algo0.tex
@@ -1,10 +1,4 @@
-\begin{algorithmic}
-\State $i \gets 10$
-\If{$i\geq 5$} 
-    \State $i \gets i-1$
-\Else
-    \If{$i\leq 3$}
-        \State $i \gets i+2$
-    \EndIf
-\EndIf 
-\end{algorithmic}
+
+$$
+x' = \frac{x-min(x)}{max(x) - min(x)}
+$$
