--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 \subsection{Motivation}
-Research has shown that households often waste food because expiration dates are overlooked and meal planning is not done systematically. The amount of avoidable food waste is equivalent to each household throwing away a 2.5kg bag of rice every week. And over half such waste can be reduced if meals are better planned. Recognizing this issue, our team aims to develop an AI-driven solution. An AI-driven menu suggestion system can address this challenge by tracking food items, reasoning about their freshness, and proposing meal options that prioritize ingredients with shorter expiration dates.
+Research has shown that households often waste food because expiration dates are overlooked and meal planning is not done systematically. The amount of avoidable food waste is equivalent to each household throwing away a 2.5kg bag of rice every week. And over half such waste can be reduced if meals are better planned. Recognizing this issue, our team aims to develop an AI-driven solution. An \textbf{AI-driven recipe suggestion system} can address this challenge by tracking food items, reasoning about their freshness, and proposing meal options that prioritize ingredients with shorter expiration dates.
 
 \subsection{Project Scope}
 Our solution contains the following features
@@ -11,7 +11,7 @@ Our solution contains the following features
 \end{itemize}
 
 \subsection{Techniques Used}
-The recommendation is simulated by a decision-making process to decide which recipe to recommend. A decision tree is constructed to solve this problem. The parameters of the decision tree can be categorized into two types. Two Bayesian networks are implemented to calculate the feasibility of the recipe and probabilities of expiration of food items. The utility function for each recipe is calculated using an unsupervised machine learning model.
+The recommendation is simulated by a decision-making process to decide which recipe to recommend. A decision tree is constructed to solve this problem. The parameters of the decision tree can be categorized into two types. Bayesian networks are implemented to infer the probability of successfully preparing the recipe and probabilities of expiration of food items. The utility function for each recipe is calculated using an unsupervised machine learning model.
 
 \subsection{Terminology \& Notations}
 
