--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,9 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0.5em}
 
-
+\usepackage{tikz}
+\usepackage{csvsimple}
+\usepackage{pgfplotstable}
 \usepackage{titling}
 \usepackage{blindtext}
 \usepackage{amsmath}
@@ -79,6 +81,7 @@
 \input{contents/Utility}
 \input{contents/Future_Improvement}
 \input{contents/Responsible_AI}
+\input{conclusion}
 
 \begin{appendices}
 \renewcommand{\thesection}{Appendix \arabic{section}}
