--- a/reference.bib
+++ b/reference.bib
@@ -52,3 +52,11 @@
 Technology},
     year = {2025}
 }
+
+@techreport{RecipeDataset,
+    author = {Alexander Wei},
+    title = {Food.com Recipes with Ingredients and Tags},
+    institution = {Kaggle.com},
+    year = {2023},
+    url = {https://www.kaggle.com/datasets/realalexanderwei/food-com-recipes-with-ingredients-and-tags/data}
+}
